// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:Form 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="a"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  Label
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="a"
                placeholder=""
                size="10"
                type="text"
                value="123"
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Form 2`] = `
{
  "body": {
    "a": "123",
  },
  "config": {
    "errorMessage": "saveFailed",
    "method": "post",
    "onFailed": [Function],
    "onSuccess": [Function],
    "successMessage": "saveSuccess",
  },
  "context": {
    "a": "123",
  },
  "data": {
    "a": "123",
  },
  "method": "post",
  "url": "/api/xxx",
}
`;

exports[`Renderer:Form initApi 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="a"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  A
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="a"
                placeholder=""
                size="10"
                type="text"
                value="1"
              />
            </div>
          </div>
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="b"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  B
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="b"
                placeholder=""
                size="10"
                type="text"
                value="2"
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Form reset 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="name"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  姓名
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="name"
                placeholder=""
                size="10"
                type="text"
                value="username"
              />
            </div>
          </div>
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="email"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  邮箱
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="email"
                placeholder=""
                size="10"
                type="email"
                value="user_changed@baidu.com"
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="reset"
        >
          <span>
            ResetButton
          </span>
        </button>
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            SubmitBtn
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Form sendOn:true 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="a"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  A
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="a"
                placeholder=""
                size="10"
                type="text"
                value="1"
              />
            </div>
          </div>
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="b"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  B
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="b"
                placeholder=""
                size="10"
                type="text"
                value="2"
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Form:onValidate 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal is-error"
          data-amis-name="a"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  A
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-error __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="a"
                placeholder=""
                size="10"
                type="text"
                value="1"
              />
            </div>
          </div>
          <ul
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-feedback"
          >
            <li>
              a is wrong
            </li>
          </ul>
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal is-error"
          data-amis-name="b"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  B
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-error __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="b"
                placeholder=""
                size="10"
                type="text"
                value="2"
              />
            </div>
          </div>
          <ul
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-feedback"
          >
            <li>
              b is wrong
            </li>
            <li>
              b is wrong 2
            </li>
          </ul>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Form:onValidate 2`] = `
{
  "a": 1,
  "b": 2,
}
`;

exports[`Renderer:Form:onValidate 3`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="a"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  A
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="a"
                placeholder=""
                size="10"
                type="text"
                value="1"
              />
            </div>
          </div>
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="b"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  B
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="b"
                placeholder=""
                size="10"
                type="text"
                value="2"
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Form:onValidate 4`] = `
{
  "a": 1,
  "b": 2,
}
`;

exports[`Renderer:Form:remoteValidate 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal is-error"
          data-amis-name="a"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  Label
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-error __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="a"
                placeholder=""
                size="10"
                type="text"
                value=""
              />
            </div>
          </div>
          <ul
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-feedback"
          >
            <li>
              这个字段服务端验证失败
            </li>
          </ul>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Form:valdiate 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal is-error is-required has-error--isRequired"
          data-amis-name="a"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  Label
                </span>
              </span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-star"
              >
                *
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-error has-error--isRequired __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl is-focused"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="a"
                placeholder=""
                size="10"
                type="text"
                value=""
              />
            </div>
          </div>
          <ul
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-feedback"
          >
            <li>
              这是必填项
            </li>
          </ul>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Form:valdiate 2`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal is-required"
          data-amis-name="a"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  Label
                </span>
              </span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-star"
              >
                *
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl is-focused"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="a"
                placeholder=""
                size="10"
                type="text"
                value="123"
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Form:valdiate 3`] = `
{
  "a": "123",
}
`;
